fix dark mode colors

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -22,39 +22,23 @@
     }
 }
 
-.light-mode {
-    @apply bg-gray-50 text-gray-800 
+.dark {
+    @apply bg-gray-900 text-gray-300 prose-p:text-gray-400
 }
 
-.dark-mode {
-    @apply bg-gray-900 text-gray-300 prose-h2:text-gray-300 prose-p:text-gray-400 prose-a:text-gray-400 hover:prose-a:text-gray-300 prose-ul:text-gray-400
-}
-
-.nuxt-content {
-    /* @apply */
-}
-
-.wrapper {
-    @apply shadow-md rounded bg-white ring-1 ring-black ring-opacity-5 m-4 px-4 py-2
+a, button {
+    @apply hover:text-gray-500 dark:text-gray-400 dark:hover:text-gray-200
 }
 
 .nuxt-content code {
     @apply before:content-none after:content-none
 }
 
-.dark-mode .wrapper {
-    @apply bg-gray-800 text-gray-400
-}
-
-.dark-mode button {
-    @apply text-gray-400 hover:text-gray-300
-}
-
-.dark-mode div pre, .dark-mode div pre span.token.operator {
+.dark div pre, .dark div pre span.token.operator {
     @apply bg-gray-800 text-gray-400 text-shadow-none
 }
 
-.dark-mode code {
+.dark code {
     @apply text-gray-400
 }
 
